# alphabot2_door_finder

./: README.md
alphabot2_door_detection/: CMakeLists.txt  package.xml  setup.cfg  setup.py
alphabot2_door_detection/alphabot2_door_detection/: door_detector_node.py  door_search_node.py
alphabot2_door_detection/launch/: door_finder.launch  door_finder.launch.py
alphabot2_door_detection/msg/: DoorDetection.msg
alphabot2_door_detection/resource/: alphabot2_door_detection
alphabot2_door_detection/scripts/: door_detector.py  door_search.py
owie/: door_search.py
