<?xml version="1.0"?>
<package format="2">
  <name>alphabot2_door_detection</name>
  <version>0.0.1</version>
  <description>Door detection and search nodes for Alphabot2 (ROS1).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

</package>
